[package]
name = "tsv_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.3.19", features = ["derive"] }
rayon = "1.7.0"
regex = "1.9.1"
strip-ansi-escapes = "0.1.1"
thiserror = "1.0.44"
